--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>My second github repo</title>
 </head>
 <body>
-    <p>yty</p>
+    <p>This is a paragrap</p>
+    <p>This is a paragrap</p>
+    <p>This is a paragrap</p>
+    
+
 </body>
 </html>
